--- a/build.gradle
+++ b/build.gradle
@@ -29,3 +29,4 @@ dependencies {
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
+mainClassName = 'helloformation.CheckNumeric'
